<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center_horizontal|center_vertical"
	android:orientation="vertical"
	android:background="@color/Bleu1" >
	   	<ImageView
	   	    android:id="@+id/imagePageAccueil"
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_gravity="center_horizontal|top"
	   	    android:background="@drawable/oms_logo"
	   	    android:contentDescription="@string/info_image"
	   	    android:layout_marginTop="25dp"
	   	    android:layout_marginBottom="25dp"/>
	   	
	   	<RelativeLayout 
	   	    android:layout_width="match_parent"
	   	    android:layout_height="wrap_content"
	   	    android:layout_gravity="center_horizontal|center_vertical">
	   	    
	   	<Button
	   		android:id="@+id/maPosition"
	   		android:layout_width="200dp"
	   		android:layout_height="wrap_content"
	   		android:onClick="onLaunchMaPosition"
	   		android:layout_centerHorizontal="true"
			style="@style/btnStyleRed"
			android:layout_marginBottom="20dp"
	   		android:text="@string/ma_position" />
	   	
	   	<Button
	   		android:id="@+id/actualite"
	   		android:layout_width="200dp"
	   		android:layout_height="wrap_content"
	   		android:layout_gravity="center_horizontal"
			android:layout_below="@id/maPosition"
	   		android:onClick="onLaunchActu"
	   		android:layout_centerHorizontal="true"
			android:layout_marginBottom="20dp"
			style="@style/btnStyleYellow"
	   		android:text="@string/actualite" />
	   	
	   	<Button
	   		android:id="@+id/annuaire"
	   		android:layout_width="200dp"
	   		android:layout_height="wrap_content"
	   		android:layout_gravity="center_horizontal"
	   		android:onClick="onLaunchAnnuaire"
	   		android:layout_centerHorizontal="true"
			android:layout_marginBottom="20dp"
			android:layout_below="@id/actualite"
			style="@style/btnStyleGreen"
	   		android:text="@string/annuaire" />
	   	</RelativeLayout>
	   	
</LinearLayout>
