<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="30dp"
    android:background="@color/Blanc"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnAccueilAssociations"
        style="@style/btnStyleOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/custom_btn_sorbus"
        android:onClick="onAssociationActivity"
        android:text="@string/association" />

    <Button
        android:id="@+id/btnAccueilEquipements"
        style="@style/btnStyleOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/custom_btn_sorbus"
        android:onClick="onEquipementActivity"
        android:text="@string/equipement" />

    <Button
        android:id="@+id/btnAccueilDisciplines"
        style="@style/btnStyleOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.82"
        android:background="@drawable/custom_btn_sorbus"
        android:onClick="onDisciplineActivity"
        android:text="@string/discipline" />

    <Button
        android:id="@+id/btnAccueilQuartiers"
        style="@style/btnStyleOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/custom_btn_sorbus"
        android:onClick="onQuartierActivity"
        android:text="@string/quartier" />

</LinearLayout>