<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nomAssociation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/association"
        android:textColor="@color/VertOmsFonce"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/iconeAdherentAssociationFiche"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@drawable/logo_ad"
        android:contentDescription="@string/info_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="20dp"
        android:background="@drawable/customborder_green"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:drawable/ic_menu_call"
            android:contentDescription="@string/info_image"
            android:onClick="onCall" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nomContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/NoirOms"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/telFixContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/NoirOms"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/telPortContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/NoirOms"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/mailContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/NoirOms"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="20dp"
        android:background="@drawable/customborder_green"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:drawable/ic_menu_my_calendar"
            android:contentDescription="@string/info_image" />

        <TextView
            android:id="@+id/horaire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/NoirOms"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="20dp"
        android:background="@drawable/customborder_green"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:drawable/ic_menu_mapmode"
            android:contentDescription="@string/info_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lieu_equipement1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/NoirOms"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lieu_equipement2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/NoirOms"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_btn_sorbus"
        android:text="@string/goMap"
        android:textColor="@color/Blanc" />

</LinearLayout>